respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Air_Waybill__c.object
<CustomObject>
    <fields>
        <fullName>Shipper_Alternative_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper Alternative Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Shipper_Alternative_Country__c</field>
                <operation>equals</operation>
                <valueField>Location__c.Country__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Waybills (Shipper Alternative Location)</relationshipLabel>
        <relationshipName>Waybills3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipper_s_Signature__c</fullName>
        <inlineHelpText>31</inlineHelpText>
        <label>Shipper&apos;s Signature</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_of_Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site of Destination</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country_of_Destination__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Waybills (Site of Destination)</relationshipLabel>
        <relationshipName>Waybills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Customs_Information__c</fullName>
        <inlineHelpText>21A</inlineHelpText>
        <label>Special Customs Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_House__c</fullName>
        <label>Tax House</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Master__c</fullName>
        <label>Tax Master</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <inlineHelpText>26A/26B</inlineHelpText>
        <label>Tax</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Chargeable_Weight__c</fullName>
        <formula>MAX(Total_Gross_Weight__c,Total_Volumetric_Weight__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Chargeable Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Collect_House_SBR__c</fullName>
        <formula>IF( ISPICKVAL(Prepaid_Collect_House_WT_VAL__c , &quot;Collect&quot;) , Total_WT_VAL_House__c, 0) + IF( ISPICKVAL( Prepaid_Collect_House_Other__c , &quot;Collect&quot;) , Total_Other_House__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Collect House SBR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Collect_House__c</fullName>
        <formula>IF( ISPICKVAL(Prepaid_Collect_House_WT_VAL__c , &quot;Collect&quot;) , Total_WT_VAL__c, 0) + IF( ISPICKVAL( Prepaid_Collect_House_Other__c , &quot;Collect&quot;) , Total_Other__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Collect House</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Collect_Master_SBR__c</fullName>
        <formula>IF( ISPICKVAL(Prepaid_Collect_WT_VAL__c , &quot;Collect&quot;) , Total_WT_VAL_Master__c , 0) + IF( ISPICKVAL( Prepaid_Collect_Other__c , &quot;Collect&quot;) , Total_Other_Master__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Collect Master SBR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Collect__c</fullName>
        <formula>IF( ISPICKVAL(Prepaid_Collect_WT_VAL__c , &quot;Collect&quot;) , Total_WT_VAL__c , 0) + IF( ISPICKVAL( Prepaid_Collect_Other__c , &quot;Collect&quot;) , Total_Other__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Collect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gross_Weight__c</fullName>
        <inlineHelpText>22K</inlineHelpText>
        <label>Total Gross Weight</label>
        <summarizedField>Air_Waybill_Line__c.Gross_Weight__c</summarizedField>
        <summaryForeignKey>Air_Waybill_Line__c.Air_Waybill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Pieces__c</fullName>
        <inlineHelpText>22J</inlineHelpText>
        <label>Total Number of Pieces</label>
        <summarizedField>Air_Waybill_Line__c.No_of_Pieces__c</summarizedField>
        <summaryForeignKey>Air_Waybill_Line__c.Air_Waybill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Other_Charges_Due_Agent_House__c</fullName>
        <label>Total Other Charges Due Agent House</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Charges_Due_Agent_Master__c</fullName>
        <label>Total Other Charges Due Agent Master</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Charges_Due_Agent__c</fullName>
        <inlineHelpText>27A/27B
            (Note: See Weight Charges Above)</inlineHelpText>
        <label>Total Other Charges Due Agent</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Charges_Due_House__c</fullName>
        <label>Total Other Charges Due House</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Charges_Due_Master__c</fullName>
        <label>Total Other Charges Due Master</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Charges_Due__c</fullName>
        <inlineHelpText>28A/28B</inlineHelpText>
        <label>Total Other Charges Due Carrier</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_House__c</fullName>
        <formula>Total_Other_Charges_Due_Agent_House__c + Total_Other_Charges_Due_House__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Other House</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other_Master__c</fullName>
        <formula>Total_Other_Charges_Due_Agent_Master__c + Total_Other_Charges_Due_Master__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Other Master</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Other__c</fullName>
        <formula>Total_Other_Charges_Due_Agent__c + Total_Other_Charges_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Prepaid_House_SBR__c</fullName>
        <formula>IF( ISPICKVAL(Prepaid_Collect_House_WT_VAL__c , &quot;Prepaid&quot;) , Total_WT_VAL_House__c, 0) + IF( ISPICKVAL( Prepaid_Collect_House_Other__c , &quot;Prepaid&quot;) , Total_Other_House__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prepaid House SBR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Prepaid_House__c</fullName>
        <formula>IF( ISPICKVAL(Prepaid_Collect_House_WT_VAL__c , &quot;Prepaid&quot;) , Total_WT_VAL__c, 0) + IF( ISPICKVAL( Prepaid_Collect_House_Other__c , &quot;Prepaid&quot;) , Total_Other__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prepaid House</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Prepaid_Master_SBR__c</fullName>
        <formula>IF( ISPICKVAL(Prepaid_Collect_WT_VAL__c , &quot;Prepaid&quot;) , Total_WT_VAL_Master__c, 0) + IF( ISPICKVAL( Prepaid_Collect_Other__c , &quot;Prepaid&quot;) , Total_Other_Master__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prepaid Master SBR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Prepaid__c</fullName>
        <formula>IF( ISPICKVAL(Prepaid_Collect_WT_VAL__c , &quot;Prepaid&quot;) , Total_WT_VAL__c , 0) + IF( ISPICKVAL( Prepaid_Collect_Other__c , &quot;Prepaid&quot;) , Total_Other__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Prepaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rate_Charge_House__c</fullName>
        <label>Total Rate/Charge House</label>
        <summarizedField>Air_Waybill_Line__c.Rate_Charge_House__c</summarizedField>
        <summaryForeignKey>Air_Waybill_Line__c.Air_Waybill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rate_Charge_Master__c</fullName>
        <label>Total Rate/Charge Master</label>
        <summarizedField>Air_Waybill_Line__c.Rate_Charge_Master__c</summarizedField>
        <summaryForeignKey>Air_Waybill_Line__c.Air_Waybill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rate_Charge__c</fullName>
        <label>Total Rate/Charge</label>
        <summarizedField>Air_Waybill_Line__c.Rate_Charge__c</summarizedField>
        <summaryForeignKey>Air_Waybill_Line__c.Air_Waybill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Service_Charges_House__c</fullName>
        <label>Total Service Charges House</label>
        <summarizedField>Air_Waybill_Line__c.Total_Service_Charge_House__c</summarizedField>
        <summaryForeignKey>Air_Waybill_Line__c.Air_Waybill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Service_Charges_Master__c</fullName>
        <label>Total Service Charges Master</label>
        <summarizedField>Air_Waybill_Line__c.Total_Service_Charge_Master__c</summarizedField>
        <summaryForeignKey>Air_Waybill_Line__c.Air_Waybill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Service_Charges__c</fullName>
        <inlineHelpText>22L
            Note: If zero, needs to display &quot;AS AGREED&quot;</inlineHelpText>
        <label>Total Service Charges</label>
        <summarizedField>Air_Waybill_Line__c.Total_Service_Charge__c</summarizedField>
        <summaryForeignKey>Air_Waybill_Line__c.Air_Waybill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Volumetric_Weight__c</fullName>
        <label>Total Volumetric Weight</label>
        <summarizedField>Air_Waybill_Line__c.Volumetric_Weight__c</summarizedField>
        <summaryForeignKey>Air_Waybill_Line__c.Air_Waybill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_WT_VAL_House__c</fullName>
        <formula>Weight_Charge_House__c + Valuation_Charge_House__c + Tax_House__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WT/VAL House</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_WT_VAL_Master__c</fullName>
        <formula>Weight_Charge_Master__c + Valuation_Charge_Master__c + Tax_Master__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WT/VAL Master</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_WT_VAL__c</fullName>
        <formula>Weight_Charge__c + Valuation_Charge__c + Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total WT/VAL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valuation_Charge_House__c</fullName>
        <label>Valuation Charge House</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valuation_Charge_Master__c</fullName>
        <label>Valuation Charge Master</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valuation_Charge__c</fullName>
        <inlineHelpText>25A/25B</inlineHelpText>
        <label>Valuation Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waybill_Master__c</fullName>
        <label>Waybill Master</label>
        <referenceTo>Waybill_Master__c</referenceTo>
        <relationshipLabel>Waybills</relationshipLabel>
        <relationshipName>Waybills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Waybill_Status__c</fullName>
        <label>Waybill Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processed by airline</fullName>
                </value>
                <value>
                    <fullName>Processed with errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight_Charge_House__c</fullName>
        <label>Weight Charge House</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weight_Charge_Master__c</fullName>
        <label>Weight Charge Master</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weight_Charge__c</fullName>
        <description>24A/24B 
(Note: Dependent upon value selected in Prepaid/Collect (WT/VAL) - Prepaid: 24A Collect:24B)</description>
        <label>Weight Charge</label>
        <summarizedField>Air_Waybill_Line__c.Total_Service_Charge__c</summarizedField>
        <summaryForeignKey>Air_Waybill_Line__c.Air_Waybill__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>at_place__c</fullName>
        <inlineHelpText>32B</inlineHelpText>
        <label>at (place)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <label>Waybill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Carrier_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Waybill Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Waybills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Other_Charges_Max_9</fullName>
        <active>false</active>
        <errorConditionFormula>Other_Charges_Count__c &gt; 9</errorConditionFormula>
        <errorMessage>Other Charges has a maximum of 9</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_VAL_equal_Other_Prepaid_Collect_House</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(Prepaid_Collect_House_WT_VAL__c) &lt;&gt; TEXT(Prepaid_Collect_House_Other__c)</errorConditionFormula>
        <errorDisplayField>Prepaid_Collect_House_WT_VAL__c</errorDisplayField>
        <errorMessage>Prepaid/Collect House (WT/VAL) must be equal to Prepaid/Collect House (Other)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_VAL_equals_Other_Prepaid_Collect</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(Prepaid_Collect_WT_VAL__c) &lt;&gt; TEXT(Prepaid_Collect_Other__c)</errorConditionFormula>
        <errorDisplayField>Prepaid_Collect_WT_VAL__c</errorDisplayField>
        <errorMessage>Prepaid / Collect (WT / VAL) must be equal to Prepaid / Collect (Other)</errorMessage>
    </validationRules>
</CustomObject>